Fix mistakes in libgnnsg2d source names

--- a/libraries/g2d/src/meson.build
+++ b/libraries/g2d/src/meson.build
@@ -9,8 +9,8 @@ libnnsg2d_srcs = files(
     'load/g2d_Load.c',
     'g2d_Softsprite.c',
     'g2d_Animation.c',
-    'g2d_Oam.c',
-    'g2d_Oamex.c',
+    'g2d_OAM.c',
+    'g2d_OAMEx.c',
     'g2d_PaletteTable.c',
     'g2d_Image.c',
     'g2d_SRTControl.c',
